[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/songs/Test Song 1- Stereo Madness.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/fonts/BOOKOS.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Options.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Options entry.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/Menu Button.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="Options" type="MarginContainer"]
anchor_top = -0.00176575
anchor_right = 1.0
anchor_bottom = 0.998234
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VSplitContainer"]
margin_right = 984.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="MasterVolume" type="HBoxContainer" parent="VSplitContainer"]
margin_top = 64.0
margin_right = 984.0
margin_bottom = 88.0
size_flags_horizontal = 15
custom_constants/separation = 20

[node name="Label" type="Label" parent="VSplitContainer/MasterVolume"]
margin_right = 147.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Master Volume"
align = 2
percent_visible = -0.0833333

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/MasterVolume"]
margin_left = 167.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VSplitContainer/MasterVolume/HBoxContainer"]
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
text = "Min"
align = 2

[node name="MasterVolumeSlider" type="HSlider" parent="VSplitContainer/MasterVolume/HBoxContainer"]
margin_left = 28.0
margin_right = 787.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
value = 80.0
tick_count = 50

[node name="Label3" type="Label" parent="VSplitContainer/MasterVolume/HBoxContainer"]
margin_left = 791.0
margin_top = 5.0
margin_right = 817.0
margin_bottom = 19.0
text = "Max"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HBoxContainer" parent="VSplitContainer"]
margin_top = 92.0
margin_right = 984.0
margin_bottom = 116.0
size_flags_horizontal = 15
custom_constants/separation = 29

[node name="Label" type="Label" parent="VSplitContainer/MusicVolume"]
margin_right = 138.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Music Volume"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/MusicVolume"]
margin_left = 167.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VSplitContainer/MusicVolume/HBoxContainer"]
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
text = "Min"
align = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VSplitContainer/MusicVolume/HBoxContainer"]
margin_left = 28.0
margin_right = 787.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
value = 80.0
tick_count = 50

[node name="Label3" type="Label" parent="VSplitContainer/MusicVolume/HBoxContainer"]
margin_left = 791.0
margin_top = 5.0
margin_right = 817.0
margin_bottom = 19.0
text = "Max"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer"]
margin_top = 120.0
margin_right = 984.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
margin_top = 518.0
margin_right = 984.0
margin_bottom = 560.0
alignment = 2

[node name="Button" type="Button" parent="VSplitContainer/HBoxContainer"]
margin_left = 786.0
margin_right = 984.0
margin_bottom = 42.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "Back to Title"
align = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"
[connection signal="value_changed" from="VSplitContainer/MasterVolume/HBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="VSplitContainer/MusicVolume/HBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
